Fixed issue where the body overflows the backdrop.

--- a/src/components/UI/SideDrawer/SideDrawer.module.scss
+++ b/src/components/UI/SideDrawer/SideDrawer.module.scss
@@ -5,7 +5,7 @@
   position: absolute;
   width: 65%;
   max-width: 370px;
-  height: 100vh;
+  height: 92%;
   background-color: $light-teal;
   color: $teal;
   transform: translateX(-100%);
